--- a/src/components/CustomerPage/customerpage.css
+++ b/src/components/CustomerPage/customerpage.css
@@ -64,4 +64,6 @@
 .locDiv {
   display: flex;
   flex-direction: row;
+  width: 100%;
+  overflow-x: scroll;
 }
