--- a/src/components/LoCCard/loccard.css
+++ b/src/components/LoCCard/loccard.css
@@ -1,17 +1,18 @@
 .LoCCard {
-  width: 20%;
+  /*width: 20%;*/
   padding: 20px 20px 40px 30px;
   margin-left: 50px;
   border: 1px solid white;
   text-align: left;
   color: white;
   font-weight: lighter;
+  min-width: 300px;
 }
 
 h3 {
   font-weight: lighter;
 }
-  
+
 .viewButton {
   height: 3vh;
   margin-top: 5px;
